# llmhub-sdk-python

./: .gitignore  CONTRIBUTING.md  DEVELOPMENT.md  README.md  openapi-config.yaml  openapi-spec.yaml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/workflows/: lint.yml  publish.yml  regenerate.yml  test.yml
llmhub/: __init__.py  audio.py  client.py  data.py  discovery.py  document.py  embeddings.py  enrichment.py  exceptions.py  image.py  moderation.py  prompts.py  text.py  video.py
scripts/: regenerate.sh
tests/: conftest.py
tests/unit/: test_audio.py  test_client.py  test_data.py  test_discovery.py  test_document.py  test_embeddings.py  test_enrichment.py  test_exceptions.py  test_image.py  test_moderation.py  test_prompts.py  test_text.py  test_video.py
