[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "llmhub"
version = "1.0.0"
description = "Official Python SDK for LLMHub - Unified access to 18+ AI providers"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "LLMHub Team", email = "team@llmhub.com"}
]
keywords = ["llm", "ai", "sdk", "openai", "anthropic", "claude", "multi-provider"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "urllib3>=1.26.0",
    "python-dateutil>=2.8.0",
    "certifi>=2021.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/wapsol/llmhub-sdk-python"
Documentation = "https://github.com/wapsol/llmhub-sdk-python#readme"
Repository = "https://github.com/wapsol/llmhub-sdk-python"
Issues = "https://github.com/wapsol/llmhub-sdk-python/issues"

[tool.setuptools]
packages = ["llmhub", "llmhub_generated"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["llmhub"]
omit = ["*/tests/*", "*/generated/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]
exclude = '''
/(
    \.git
  | \.venv
  | generated
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true
skip = ["generated"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
exclude = ["generated", "tests"]
